--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-07 17:11 -->
+<!-- 2022-12-08 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,49 +46,49 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9a4ff45">1. 妙妙文章</a>
+<li><a href="#org2fb6dfa">1. 妙妙文章</a>
 <ul>
-<li><a href="#org9bcc366">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgaaa272f">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org0b99996">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orgb9396c8">1.4. 关于编辑器</a></li>
-<li><a href="#org1bfc96a">1.5. 关于代码</a>
+<li><a href="#org3deb48f">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org5aa7f3f">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org815e5b2">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgd3de570">1.4. 关于编辑器</a></li>
+<li><a href="#orgab77d1e">1.5. 关于代码</a>
 <ul>
-<li><a href="#org6b93470">1.5.1. Lisp</a></li>
+<li><a href="#orge94d511">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org6b6dcb4">1.6. 关于CPU</a></li>
-<li><a href="#orgf833bbd">1.7. 关于算法</a>
+<li><a href="#org0f5680f">1.6. 关于CPU</a></li>
+<li><a href="#org05442a4">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgee50306">1.7.1. 关于随机</a></li>
+<li><a href="#orgace9964">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org1f5d808">1.8. 关于AI</a></li>
-<li><a href="#orgd4c3622">1.9. 关于软件 &#x2014; 面对复杂系统</a>
+<li><a href="#orgf698781">1.8. 关于AI</a></li>
+<li><a href="#org4673396">1.9. 关于软件 &#x2014; 面对复杂系统</a>
 <ul>
-<li><a href="#org7522fa6">1.9.1. Everything is a file</a></li>
-<li><a href="#org1dd9439">1.9.2. SQLite</a></li>
+<li><a href="#org7a92420">1.9.1. Everything is a file</a></li>
+<li><a href="#org03cc64f">1.9.2. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org935b0a2">1.10. 关于workflow</a></li>
+<li><a href="#orgad55b96">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgd352f34">2. 棒棒视频</a>
+<li><a href="#orgcd4eea2">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgc66163e">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org008bbdb">2.2. 迷因水母</a></li>
-<li><a href="#org902e770">2.3. 各种剧</a></li>
-<li><a href="#org6975057">2.4. 电影</a></li>
+<li><a href="#orgf0bf0d8">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org3b47811">2.2. 迷因水母</a></li>
+<li><a href="#org7a9daef">2.3. 各种剧</a></li>
+<li><a href="#orgaad8da2">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org6a0d2bb">3. 快乐游戏</a></li>
-<li><a href="#org6211e37">4. 宝藏博主</a></li>
-<li><a href="#orgc70ddaa">5. 有意思的</a>
+<li><a href="#org906d63f">3. 快乐游戏</a></li>
+<li><a href="#org6a300fe">4. 宝藏博主</a></li>
+<li><a href="#org7b5723d">5. 有意思的</a>
 <ul>
-<li><a href="#orgd43503f">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org02aabdc">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orga245457">6. 我想玩的</a></li>
+<li><a href="#org4d57e2b">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -97,8 +97,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org9a4ff45" class="outline-2">
-<h2 id="org9a4ff45"><span class="section-number-2">1.</span> <a href="#org9a4ff45">妙妙文章</a></h2>
+<div id="outline-container-org2fb6dfa" class="outline-2">
+<h2 id="org2fb6dfa"><span class="section-number-2">1.</span> <a href="#org2fb6dfa">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org8ab7e35">
+<figure id="orgda3c2dc">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org9bcc366" class="outline-3">
-<h3 id="org9bcc366"><span class="section-number-3">1.1.</span> <a href="#org9bcc366">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org3deb48f" class="outline-3">
+<h3 id="org3deb48f"><span class="section-number-3">1.1.</span> <a href="#org3deb48f">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -548,8 +548,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-orgaaa272f" class="outline-3">
-<h3 id="orgaaa272f"><span class="section-number-3">1.2.</span> <a href="#orgaaa272f">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org5aa7f3f" class="outline-3">
+<h3 id="org5aa7f3f"><span class="section-number-3">1.2.</span> <a href="#org5aa7f3f">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -583,8 +583,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org0b99996" class="outline-3">
-<h3 id="org0b99996"><span class="section-number-3">1.3.</span> <a href="#org0b99996">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org815e5b2" class="outline-3">
+<h3 id="org815e5b2"><span class="section-number-3">1.3.</span> <a href="#org815e5b2">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -618,8 +618,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orgb9396c8" class="outline-3">
-<h3 id="orgb9396c8"><span class="section-number-3">1.4.</span> <a href="#orgb9396c8">关于编辑器</a></h3>
+<div id="outline-container-orgd3de570" class="outline-3">
+<h3 id="orgd3de570"><span class="section-number-3">1.4.</span> <a href="#orgd3de570">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -635,8 +635,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org1bfc96a" class="outline-3">
-<h3 id="org1bfc96a"><span class="section-number-3">1.5.</span> <a href="#org1bfc96a">关于代码</a></h3>
+<div id="outline-container-orgab77d1e" class="outline-3">
+<h3 id="orgab77d1e"><span class="section-number-3">1.5.</span> <a href="#orgab77d1e">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -661,8 +661,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org6b93470" class="outline-4">
-<h4 id="org6b93470"><span class="section-number-4">1.5.1.</span> <a href="#org6b93470">Lisp</a></h4>
+<div id="outline-container-orge94d511" class="outline-4">
+<h4 id="orge94d511"><span class="section-number-4">1.5.1.</span> <a href="#orge94d511">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -685,8 +685,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org6b6dcb4" class="outline-3">
-<h3 id="org6b6dcb4"><span class="section-number-3">1.6.</span> <a href="#org6b6dcb4">关于CPU</a></h3>
+<div id="outline-container-org0f5680f" class="outline-3">
+<h3 id="org0f5680f"><span class="section-number-3">1.6.</span> <a href="#org0f5680f">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -701,8 +701,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgf833bbd" class="outline-3">
-<h3 id="orgf833bbd"><span class="section-number-3">1.7.</span> <a href="#orgf833bbd">关于算法</a></h3>
+<div id="outline-container-org05442a4" class="outline-3">
+<h3 id="org05442a4"><span class="section-number-3">1.7.</span> <a href="#org05442a4">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -721,8 +721,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgee50306" class="outline-4">
-<h4 id="orgee50306"><span class="section-number-4">1.7.1.</span> <a href="#orgee50306">关于随机</a></h4>
+<div id="outline-container-orgace9964" class="outline-4">
+<h4 id="orgace9964"><span class="section-number-4">1.7.1.</span> <a href="#orgace9964">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -736,8 +736,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org1f5d808" class="outline-3">
-<h3 id="org1f5d808"><span class="section-number-3">1.8.</span> <a href="#org1f5d808">关于AI</a></h3>
+<div id="outline-container-orgf698781" class="outline-3">
+<h3 id="orgf698781"><span class="section-number-3">1.8.</span> <a href="#orgf698781">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -747,8 +747,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd4c3622" class="outline-3">
-<h3 id="orgd4c3622"><span class="section-number-3">1.9.</span> <a href="#orgd4c3622">关于软件 &#x2014; 面对复杂系统</a></h3>
+<div id="outline-container-org4673396" class="outline-3">
+<h3 id="org4673396"><span class="section-number-3">1.9.</span> <a href="#org4673396">关于软件 &#x2014; 面对复杂系统</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org7522fa6" class="outline-4">
-<h4 id="org7522fa6"><span class="section-number-4">1.9.1.</span> <a href="#org7522fa6">Everything is a file</a></h4>
+<div id="outline-container-org7a92420" class="outline-4">
+<h4 id="org7a92420"><span class="section-number-4">1.9.1.</span> <a href="#org7a92420">Everything is a file</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 <a href="https://blog.sunfishcode.online/">sunfishcode</a> 的 "Everything Is A File" 系列博文
@@ -779,8 +779,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org1dd9439" class="outline-4">
-<h4 id="org1dd9439"><span class="section-number-4">1.9.2.</span> <a href="#org1dd9439">SQLite</a></h4>
+<div id="outline-container-org03cc64f" class="outline-4">
+<h4 id="org03cc64f"><span class="section-number-4">1.9.2.</span> <a href="#org03cc64f">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-2">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -794,8 +794,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-org935b0a2" class="outline-3">
-<h3 id="org935b0a2"><span class="section-number-3">1.10.</span> <a href="#org935b0a2">关于workflow</a></h3>
+<div id="outline-container-orgad55b96" class="outline-3">
+<h3 id="orgad55b96"><span class="section-number-3">1.10.</span> <a href="#orgad55b96">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -805,8 +805,8 @@ File, with an overall focus on system interface design.
 </div>
 </div>
 
-<div id="outline-container-orgd352f34" class="outline-2">
-<h2 id="orgd352f34"><span class="section-number-2">2.</span> <a href="#orgd352f34">棒棒视频</a></h2>
+<div id="outline-container-orgcd4eea2" class="outline-2">
+<h2 id="orgcd4eea2"><span class="section-number-2">2.</span> <a href="#orgcd4eea2">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -865,8 +865,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgc66163e" class="outline-3">
-<h3 id="orgc66163e"><span class="section-number-3">2.1.</span> <a href="#orgc66163e">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgf0bf0d8" class="outline-3">
+<h3 id="orgf0bf0d8"><span class="section-number-3">2.1.</span> <a href="#orgf0bf0d8">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -897,8 +897,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org008bbdb" class="outline-3">
-<h3 id="org008bbdb"><span class="section-number-3">2.2.</span> <a href="#org008bbdb">迷因水母</a></h3>
+<div id="outline-container-org3b47811" class="outline-3">
+<h3 id="org3b47811"><span class="section-number-3">2.2.</span> <a href="#org3b47811">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org902e770" class="outline-3">
-<h3 id="org902e770"><span class="section-number-3">2.3.</span> <a href="#org902e770">各种剧</a></h3>
+<div id="outline-container-org7a9daef" class="outline-3">
+<h3 id="org7a9daef"><span class="section-number-3">2.3.</span> <a href="#org7a9daef">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -938,8 +938,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6975057" class="outline-3">
-<h3 id="org6975057"><span class="section-number-3">2.4.</span> <a href="#org6975057">电影</a></h3>
+<div id="outline-container-orgaad8da2" class="outline-3">
+<h3 id="orgaad8da2"><span class="section-number-3">2.4.</span> <a href="#orgaad8da2">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -965,7 +965,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgb0492e3">
+<figure id="org830263a">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -983,8 +983,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6a0d2bb" class="outline-2">
-<h2 id="org6a0d2bb"><span class="section-number-2">3.</span> <a href="#org6a0d2bb">快乐游戏</a></h2>
+<div id="outline-container-org906d63f" class="outline-2">
+<h2 id="org906d63f"><span class="section-number-2">3.</span> <a href="#org906d63f">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -1014,8 +1014,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6211e37" class="outline-2">
-<h2 id="org6211e37"><span class="section-number-2">4.</span> <a href="#org6211e37">宝藏博主</a></h2>
+<div id="outline-container-org6a300fe" class="outline-2">
+<h2 id="org6a300fe"><span class="section-number-2">4.</span> <a href="#org6a300fe">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1026,7 +1026,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org53ad43f">
+<figure id="orgb8ea906">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1034,8 +1034,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc70ddaa" class="outline-2">
-<h2 id="orgc70ddaa"><span class="section-number-2">5.</span> <a href="#orgc70ddaa">有意思的</a></h2>
+<div id="outline-container-org7b5723d" class="outline-2">
+<h2 id="org7b5723d"><span class="section-number-2">5.</span> <a href="#org7b5723d">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1061,8 +1061,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd43503f" class="outline-3">
-<h3 id="orgd43503f"><span class="section-number-3">5.1.</span> <a href="#orgd43503f">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org02aabdc" class="outline-3">
+<h3 id="org02aabdc"><span class="section-number-3">5.1.</span> <a href="#org02aabdc">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1074,8 +1074,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orga245457" class="outline-2">
-<h2 id="orga245457"><span class="section-number-2">6.</span> <a href="#orga245457">我想玩的</a></h2>
+<div id="outline-container-org4d57e2b" class="outline-2">
+<h2 id="org4d57e2b"><span class="section-number-2">6.</span> <a href="#org4d57e2b">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1098,7 +1098,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-07 12:54</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-07 17:11</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/index.org">index.org</a></td></tr>
 </table>
