--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-07 17:11 -->
+<!-- 2022-12-08 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgacc0db8">1. 笔记</a></li>
-<li><a href="#orga79b4a6">2. 推送</a></li>
-<li><a href="#orga1c7e64">3. Git</a></li>
-<li><a href="#orgcf69c09">4. XBox</a></li>
-<li><a href="#org8d97616">5. Bilibili</a></li>
+<li><a href="#orgc0f844c">1. 笔记</a></li>
+<li><a href="#org20bb3c1">2. 推送</a></li>
+<li><a href="#org5fc7415">3. Git</a></li>
+<li><a href="#org146f7bb">4. XBox</a></li>
+<li><a href="#org75aaf6f">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgacc0db8" class="outline-2">
-<h2 id="orgacc0db8"><span class="section-number-2">1.</span> <a href="#orgacc0db8">笔记</a></h2>
+<div id="outline-container-orgc0f844c" class="outline-2">
+<h2 id="orgc0f844c"><span class="section-number-2">1.</span> <a href="#orgc0f844c">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga79b4a6" class="outline-2">
-<h2 id="orga79b4a6"><span class="section-number-2">2.</span> <a href="#orga79b4a6">推送</a></h2>
+<div id="outline-container-org20bb3c1" class="outline-2">
+<h2 id="org20bb3c1"><span class="section-number-2">2.</span> <a href="#org20bb3c1">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga1c7e64" class="outline-2">
-<h2 id="orga1c7e64"><span class="section-number-2">3.</span> <a href="#orga1c7e64">Git</a></h2>
+<div id="outline-container-org5fc7415" class="outline-2">
+<h2 id="org5fc7415"><span class="section-number-2">3.</span> <a href="#org5fc7415">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgcf69c09" class="outline-2">
-<h2 id="orgcf69c09"><span class="section-number-2">4.</span> <a href="#orgcf69c09">XBox</a></h2>
+<div id="outline-container-org146f7bb" class="outline-2">
+<h2 id="org146f7bb"><span class="section-number-2">4.</span> <a href="#org146f7bb">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8d97616" class="outline-2">
-<h2 id="org8d97616"><span class="section-number-2">5.</span> <a href="#org8d97616">Bilibili</a></h2>
+<div id="outline-container-org75aaf6f" class="outline-2">
+<h2 id="org75aaf6f"><span class="section-number-2">5.</span> <a href="#org75aaf6f">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-07 17:11</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">tools.org</a></td></tr>
 </table>
