--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-07 17:11 -->
+<!-- 2022-12-08 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1236ec0">1. 一大早</a></li>
-<li><a href="#org8681e96">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org3b28863">3. 科研训练</a></li>
-<li><a href="#org79ed451">4. 520</a></li>
+<li><a href="#org83a5cd5">1. 一大早</a></li>
+<li><a href="#orgc44d5be">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#orge909e8c">3. 科研训练</a></li>
+<li><a href="#org5eb6821">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org1236ec0" class="outline-2">
-<h2 id="org1236ec0"><span class="section-number-2">1.</span> <a href="#org1236ec0">一大早</a></h2>
+<div id="outline-container-org83a5cd5" class="outline-2">
+<h2 id="org83a5cd5"><span class="section-number-2">1.</span> <a href="#org83a5cd5">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8681e96" class="outline-2">
-<h2 id="org8681e96"><span class="section-number-2">2.</span> <a href="#org8681e96">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-orgc44d5be" class="outline-2">
+<h2 id="orgc44d5be"><span class="section-number-2">2.</span> <a href="#orgc44d5be">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org3b28863" class="outline-2">
-<h2 id="org3b28863"><span class="section-number-2">3.</span> <a href="#org3b28863">科研训练</a></h2>
+<div id="outline-container-orge909e8c" class="outline-2">
+<h2 id="orge909e8c"><span class="section-number-2">3.</span> <a href="#orge909e8c">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-org79ed451" class="outline-2">
-<h2 id="org79ed451"><span class="section-number-2">4.</span> <a href="#org79ed451">520</a></h2>
+<div id="outline-container-org5eb6821" class="outline-2">
+<h2 id="org5eb6821"><span class="section-number-2">4.</span> <a href="#org5eb6821">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-07 17:11</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2021-05-19.org">2021-05-19.org</a></td></tr>
 </table>
