--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-07 17:11 -->
+<!-- 2022-12-08 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc8e3e21">1. 暑假</a>
+<li><a href="#orgfed2190">1. 暑假</a>
 <ul>
-<li><a href="#orgd24eb25">1.1. 夏令营</a></li>
+<li><a href="#org095bc0f">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org22ca8f0">2. 打工</a></li>
-<li><a href="#orgaf80430">3. 我的928</a>
+<li><a href="#orged40376">2. 打工</a></li>
+<li><a href="#orge843024">3. 我的928</a>
 <ul>
-<li><a href="#org9f8e7b8">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org1922038">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org79f4c3b">4. 他们的928</a></li>
-<li><a href="#org0c156ce">5. 总结</a></li>
+<li><a href="#orgfebc2ea">4. 他们的928</a></li>
+<li><a href="#org4bdc018">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgbef79dd">
+<figure id="org219caa7">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgc8e3e21" class="outline-2">
-<h2 id="orgc8e3e21"><span class="section-number-2">1.</span> <a href="#orgc8e3e21">暑假</a></h2>
+<div id="outline-container-orgfed2190" class="outline-2">
+<h2 id="orgfed2190"><span class="section-number-2">1.</span> <a href="#orgfed2190">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgd24eb25" class="outline-3">
-<h3 id="orgd24eb25"><span class="section-number-3">1.1.</span> <a href="#orgd24eb25">夏令营</a></h3>
+<div id="outline-container-org095bc0f" class="outline-3">
+<h3 id="org095bc0f"><span class="section-number-3">1.1.</span> <a href="#org095bc0f">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org22ca8f0" class="outline-2">
-<h2 id="org22ca8f0"><span class="section-number-2">2.</span> <a href="#org22ca8f0">打工</a></h2>
+<div id="outline-container-orged40376" class="outline-2">
+<h2 id="orged40376"><span class="section-number-2">2.</span> <a href="#orged40376">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgaf80430" class="outline-2">
-<h2 id="orgaf80430"><span class="section-number-2">3.</span> <a href="#orgaf80430">我的928</a></h2>
+<div id="outline-container-orge843024" class="outline-2">
+<h2 id="orge843024"><span class="section-number-2">3.</span> <a href="#orge843024">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org9f8e7b8" class="outline-3">
-<h3 id="org9f8e7b8"><span class="section-number-3">3.1.</span> <a href="#org9f8e7b8">928演唱会(bushi</a></h3>
+<div id="outline-container-org1922038" class="outline-3">
+<h3 id="org1922038"><span class="section-number-3">3.1.</span> <a href="#org1922038">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org441b86a">
+<figure id="orgddaf64c">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org42a97f4">
+<figure id="org0d8a7b7">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org79f4c3b" class="outline-2">
-<h2 id="org79f4c3b"><span class="section-number-2">4.</span> <a href="#org79f4c3b">他们的928</a></h2>
+<div id="outline-container-orgfebc2ea" class="outline-2">
+<h2 id="orgfebc2ea"><span class="section-number-2">4.</span> <a href="#orgfebc2ea">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org0c156ce" class="outline-2">
-<h2 id="org0c156ce"><span class="section-number-2">5.</span> <a href="#org0c156ce">总结</a></h2>
+<div id="outline-container-org4bdc018" class="outline-2">
+<h2 id="org4bdc018"><span class="section-number-2">5.</span> <a href="#org4bdc018">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-07 17:11</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2022-09-28.org">2022-09-28.org</a></td></tr>
 </table>
